get base assets
get base assets

--- a/video_archive/web/manifest.json
+++ b/video_archive/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "video_archive",
-    "short_name": "video_archive",
+    "name": "flutter_youtube_ui",
+    "short_name": "flutter_youtube_ui",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
