--- a/video_archive/android/app/src/main/AndroidManifest.xml
+++ b/video_archive/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.video_archive">
+    package="com.example.flutter_youtube_ui">
    <application
-        android:label="video_archive"
+        android:label="flutter_youtube_ui"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
